--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ testing/custom_implementations/work_dir/all_gather/tester_aurora_allgather.sh.*
 
 
 testing/custom_implementations/work_dir/reduce_scatter/debug_plots
+testing/custom_implementations/work_dir/all_reduce/runner_polaris_allreduce.sh.*
+testing/custom_implementations/work_dir/all_reduce/out
